test/integration/bad/lang/incomplete12.stan
functions {
  real (int x) {
    return x + 1.0;
  }
}
